# OpenGL

./: README.md
assets/shaders/: pbr.frag  simple.frag  simple.vert
cpp/: CMakeLists.txt  GltfMeshModelLoader.cpp  GltfMeshModelLoader.h  MeshModelBuilder.cpp  MeshModelBuilder.h  MeshModelLoaderBase.h  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TextureAsset.cpp  TextureAsset.h  Utility.cpp  Utility.h  main.cpp
cpp/scene/: CameraBaseNode.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  RenderObject.cpp  RenderObject.h  SceneGraph.cpp  SceneGraph.h  SceneLight.h  SceneNode.h  Transform.cpp  Transform.h
java/com/example/my_mobile_app/: MainActivity.kt
my_mobile_app/: .gitignore  settings.gradle.kts
my_mobile_app/app/: build.gradle.kts
my_mobile_app/app/src/main/: AndroidManifest.xml  README.md
my_mobile_app/app/src/main/assets/AntiqueCamera/: AntiqueCamera2.gltf
my_mobile_app/app/src/main/assets/shaders/: jd_shader.frag  jd_shader.vert  pbr.frag  pbr.vert
my_mobile_app/app/src/main/cpp/: AndroidOut.h  CMakeLists.txt  GltfMeshModelLoader.cpp  GltfMeshModelLoader.h  MeshModelBuilder.h  MeshModelLoaderBase.h  Model.cpp  Model.h  Renderer.h  Shader.cpp  Shader.h  TextureAsset.cpp  TextureAsset.h  main.cpp
my_mobile_app/app/src/main/cpp/resource_builder/: ArchiveResource.cpp  ArchiveResource.h  IResource.h  ResourceBuilder.cpp  ResourceBuilder.h
my_mobile_app/app/src/main/cpp/scene/: CameraBaseNode.cpp  SceneGraph.h  (+8 more)
my_mobile_app/gradle/: libs.versions.toml
my_mobile_app/gradle/wrapper/: gradle-wrapper.properties
(+214 files in other folders)
